[project]
name = "fnal_libIO"
description = "Package to serve as an abstraction layer communication interfaces (VISA, prologix...)"
version = "0.1.1"

requires-python = ">=3.10"
dependencies = [
]

authors = [
    { name="Adam Quinn", email="aquinn@fnal.gov" },
    { name="Gregory Zdanowski-House", email="gzdano2@uic.edu" },
]
readme = "README.md"
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

#[project.optional-dependencies]
#logging = ["fnal_log_wizard"]

#[project.urls]
#"Homepage" = "https://github.com/SpacelyProject/py-libs-common/libIO"
#"Bug Tracker" = "https://github.com/SpacelyProject/py-libs-common/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
