[project]
name = "fnal_libawg"
description = "Package to serve as an abstraction layer for Arbitrary Waveform Generators"
version = "0.1.0"

requires-python = ">=3.10"
dependencies = [
    "fnal_libprologix @ git+ssh://git@github.com/Fermilab-Microelectronics/py-libs-common#subdirectory=libprologixAAAA"
]

authors = [
    { name="Gregory Zdanowski-House", email="gzdano2@uic.edu" },
]
readme = "README.md"
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
logging = ["fnal_log_wizard"]

[project.urls]
"Homepage" = "https://github.com/Fermilab-Microelectronics/py-libs-common/libawg"
"Bug Tracker" = "https://github.com/Fermilab-Microelectronics/py-libs-common/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true