[project]
name = "fnal_libinstrument"
description = "Package containing driver libraries for non-NI instruments."
version = "0.2"

requires-python = ">=3.10"
dependencies = [
    "fnal_libIO @ git+https://github.com/Fermilab-Microelectronics/py-libs-common#subdirectory=libIO",
    "fnal_log_wizard @ git+https://github.com/Fermilab-Microelectronics/py-libs-common#subdirectory=liblogwizard"
]

authors = [
    { name="Gregory Zdanowski-House", email="gzdano2@uic.edu" },
	{ name="Adam Quinn", email="aquinn@fnal.gov" },
]
readme = "README.md"
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
logging = ["fnal_log_wizard"]

[project.urls]
"Homepage" = "https://github.com/Fermilab-Microelectronics/py-libs-common/fnal_libinstrument"
"Bug Tracker" = "https://github.com/Fermilab-Microelectronics/py-libs-common/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true