[project]
name = "fnal_libvisa"
description = "Package to serve as an abstraction layer for VISA instruments"
version = "0.1.1"

requires-python = ">=3.10"
dependencies = [
    "fnal_libprologix @ git+https://github.com/Fermilab-Microelectronics/py-libs-common#subdirectory=libprologix",
    "fnal_log_wizard @ git+https://github.com/Fermilab-Microelectronics/py-libs-common#subdirectory=liblogwizard"
]

authors = [
    { name="Adam Quinn", email="aquinn@fnal.gov" },
]
readme = "README.md"
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
logging = ["fnal_log_wizard"]

[project.urls]
"Homepage" = "https://github.com/Fermilab-Microelectronics/py-libs-common/libawg"
"Bug Tracker" = "https://github.com/Fermilab-Microelectronics/py-libs-common/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true