[project]
name = "fnal_ni_toolbox"
description = "Package to simplify interaction with DC power modules from National Instruments"
version = "0.1.0"

requires-python = ">=3.10"
dependencies = [
    "nidcpower>=1.4.3"
]

authors = [
    { name="Adam Quinn", email="aquinn@fnal.gov" },
    { name="Gregory Zdanowski-House", email="gzdano2@uic.edu" },
]
readme = "README.md"
classifiers = [
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows"
]

[project.optional-dependencies]
logging = ["fnal_log_wizard"]

[project.urls]
"Homepage" = "https://github.com/Fermilab-Microelectronics/py-libs-common/ni_toolbox"
"Bug Tracker" = "https://github.com/Fermilab-Microelectronics/py-libs-common/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
